# src/models/user.model.ts
@@ -1,6 +1,6 @@
 import { Document, model, Model, Schema } from 'mongoose';
 
-const userSchema: Schema = new Schema(
+const userSchema: Schema = new Schema<IUser>(
   {
     name: {
       type: String,
@@ -24,17 +24,25 @@ const userSchema: Schema = new Schema(
         default: 0,
       },
     },
+    balance: {
+      type: Number,
+      default: 0,
+    },
   },
   { timestamps: true },
 );
 
+interface IWallet {
+  balance: number;
+}
 export interface IUser extends Document {
   name: string;
   steamId: string;
   avatar: string;
   profileUrl: string;
   tradeUrl: string;
-  wallet: { balance: number };
+  balance: number;
+  wallet: IWallet;
 }
 
 const UserModel: Model<IUser> = model<IUser>('User', userSchema);
